#1 - improve finalizer logic and safe status handling for K3S resources

--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -3,4 +3,6 @@
 # It should be run by config/default
 resources:
 - bases/config.onprem.edenlab.io_k3sremotemachines.yaml
+- bases/config.onprem.edenlab.io_k3sclusters.yaml
+- bases/config.onprem.edenlab.io_k3scontrolplanes.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
