--- a/playbooks/k3s_remote_machine.yml
+++ b/playbooks/k3s_remote_machine.yml
@@ -4,11 +4,29 @@
   gather_facts: false
 
   tasks:
+    - name: Get current status of the K3SRemoteMachine resource
+      kubernetes.core.k8s_info:
+        api_version: config.onprem.edenlab.io/v1alpha1
+        kind: K3SRemoteMachine
+        name: "{{ ansible_operator_meta.name }}"
+        namespace: "{{ ansible_operator_meta.namespace }}"
+      register: k3s_remote_machine_cr_status
+      failed_when: false
+
+    - name: Determine if CR changed
+      set_fact:
+        k3s_cr_needs_reprocessing: "{{ (k3s_remote_machine_cr_status.resources[0].metadata.generation | int) > (k3s_remote_machine_cr_status.resources[0].status.observedGeneration | default(0) | int) }}"
+
+    - name: Extract current phase
+      set_fact:
+        k3s_remote_machine_phase: "{{ k3s_remote_machine_cr_status.resources[0].status.phase | default('') }}"
+
     - block:
-        - name: Set phase to "Installing"
-          include_role:
+        - name: Set phase to "Installing". K3SRemoteMachine resource
+          ansible.builtin.import_role:
             name: operator_status
           vars:
+            k3s_resource_kind: K3SRemoteMachine
             new_phase: "Installing"
             expected_previous_phase: ["", "Failed"]
             new_message: "Starting K3S remote machine configuration"
@@ -28,6 +46,7 @@
             - name: Run K3S remote machine airgap role
               ansible.builtin.import_role:
                 name: airgap
+          when: k3s_remote_machine_phase not in ["Installed", "Uninstalled"] or k3s_cr_needs_reprocessing
           vars:
             ansible_connection: ssh
 
@@ -71,7 +90,7 @@
           when:
             - k3s_role == 'server'
             - k3s_init_server
-          set_fact:
+          ansible.builtin.set_fact:
             k3s_kubeconfig_local: "{{ hostvars[inventory_hostname]['k3s_kubeconfig'] | default('Not defined') }}"
           run_once: true
 
@@ -79,7 +98,7 @@
           when:
             - k3s_role == 'server'
             - k3s_init_server
-          set_fact:
+          ansible.builtin.set_fact:
             k3s_token_local: "{{ hostvars[inventory_hostname]['k3s_token'] | default('Not defined') }}"
           run_once: true
 
@@ -94,10 +113,13 @@
               apiVersion: v1
               kind: Secret
               metadata:
-                name: "{{ k3s_prefix_secret_ref }}-kubeconfig-secret"
+                labels:
+                  cluster.x-k8s.io/cluster-name: "{{ k3s_prefix_secret_ref }}"
+                name: "{{ k3s_prefix_secret_ref }}-kubeconfig"
                 namespace: "{{ ansible_operator_meta.namespace }}"
               stringData:
-                kubeconfig: "{{ k3s_kubeconfig_local }}"
+                value: "{{ k3s_kubeconfig_local }}"
+              type: cluster.x-k8s.io/secret
           delegate_to: localhost
           run_once: true
 
@@ -119,21 +141,23 @@
           delegate_to: localhost
           run_once: true
 
-        - name: Set phase to "Ready"
-          include_role:
+        - name: Set phase to "Ready". K3SRemoteMachine resource
+          ansible.builtin.import_role:
             name: operator_status
           vars:
-            new_phase: "Ready"
+            k3s_resource_kind: K3SRemoteMachine
+            new_phase: "Installed"
             expected_previous_phase: ["Failed", "Installing"]
             new_message: "K3S node successfully configured"
             new_ready_status: true
-
+            new_observed_generation_status: "{{ k3s_remote_machine_cr_status.resources[0].metadata.generation | default(0) | int }}"
       rescue:
-        - name: Set phase to "Failed"
-          include_role:
+        - name: Set phase to "Failed". K3SRemoteMachine resource
+          ansible.builtin.import_role:
             name: operator_status
           vars:
+            k3s_resource_kind: K3SRemoteMachine
             new_phase: "Failed"
-            expected_previous_phase: ["Installing", "Ready"]
+            expected_previous_phase: ["Installing", "Installed"]
             new_message: "An error occurred during K3S setup"
             new_ready_status: false
