--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,4 +1,6 @@
 ## Append samples of your project ##
 resources:
 - config_v1alpha1_k3sremotemachine.yaml
+- config_v1alpha1_k3scluster.yaml
+- config_v1alpha1_k3scontrolplane.yaml
 # +kubebuilder:scaffold:manifestskustomizesamples
