--- a/watches.yaml
+++ b/watches.yaml
@@ -8,6 +8,7 @@
     role: k3s_cluster_reset
   manageStatus: true
   playbook: playbooks/k3s_cluster.yml
+# 'reconcilePeriod' is set via an annotation on the Custom Resource: 'ansible.sdk.operatorframework.io/reconcile-period'.
 #  reconcilePeriod: 120s
   vars:
     k3s_version: "{{ _config_onprem_edenlab_io_k3scluster.spec.k3sVersion | default('') }}"
@@ -21,6 +22,7 @@
     role: k3s_control_plane_reset
   manageStatus: true
   playbook: playbooks/k3s_control_plane.yml
+# 'reconcilePeriod' is set via an annotation on the Custom Resource: 'ansible.sdk.operatorframework.io/reconcile-period'.
 #  reconcilePeriod: 120s
   vars:
     k3s_ha_mode: "{{ _config_onprem_edenlab_io_k3scontrolplane.spec.k3sHAMode | default(false) }}"
@@ -36,6 +38,7 @@
     role: k3s_remote_machine_reset
   manageStatus: true
   playbook: playbooks/k3s_remote_machine.yml
+# 'reconcilePeriod' is set via an annotation on the Custom Resource: 'ansible.sdk.operatorframework.io/reconcile-period'.
 #  reconcilePeriod: 120s
   vars:
     # Ansible config
