--- a/.github/workflows/core-public.yaml
+++ b/.github/workflows/core-public.yaml
@@ -30,6 +30,14 @@ jobs:
           ref: ${{ github.ref }}
           fetch-depth: 0
 
+      - name: Checkout Gitflow CI action repository
+        uses: actions/checkout@v4
+        with:
+          repository: edenlabllc/gitflow.ci.action
+          ref: v1
+          token: ${{ secrets.GH_TOKEN_REPO_FULL_ACCESS }}
+          path: .github/actions/gitflow.ci.action
+
       - name: Generate infrastructure components manifest
         run: |
           # constants for selecting branches
@@ -51,7 +59,7 @@ jobs:
           IMG="${CONTAINER_REPOSITORY}:${VERSION}" make generate 
 
       - name: Run Gitflow CI action
-        uses: edenlabllc/gitflow.ci.action@v1
+        uses: .github/actions/gitflow.ci.action
         with:
           core_aws_region: ${{ env.CORE_AWS_REGION }}
           core_aws_access_key_id: ${{ secrets.CORE_AWS_ACCESS_KEY_ID }}
