--- a/.github/workflows/core.yaml
+++ b/.github/workflows/core.yaml
@@ -30,8 +30,16 @@ jobs:
           ref: ${{ github.ref }}
           fetch-depth: 0
 
+      - name: Checkout Gitflow CI action repository
+        uses: actions/checkout@v4
+        with:
+          repository: edenlabllc/gitflow.ci.action
+          ref: v1
+          token: ${{ secrets.GH_TOKEN_REPO_FULL_ACCESS }}
+          path: .github/actions/gitflow.ci.action
+
       - name: Run Gitflow CI action
-        uses: edenlabllc/gitflow.ci.action@v1
+        uses: ./.github/actions/gitflow.ci.action
         with:
           core_aws_region: ${{ env.CORE_AWS_REGION }}
           core_aws_access_key_id: ${{ secrets.CORE_AWS_ACCESS_KEY_ID }}
@@ -39,3 +47,4 @@ jobs:
           github_token_repo_full_access: ${{ secrets.GH_TOKEN_REPO_FULL_ACCESS }}
           ecr_repository_name_prefix: core.
           image_delete: false
+          image_scan: false
