--- a/.github/workflows/core-public.yaml
+++ b/.github/workflows/core-public.yaml
@@ -29,14 +29,6 @@ jobs:
           ref: ${{ github.ref }}
           fetch-depth: 0
 
-      - name: Checkout Gitflow CI action repository
-        uses: actions/checkout@v4
-        with:
-          repository: edenlabllc/gitflow.ci.action
-          ref: v1
-          token: ${{ secrets.GH_TOKEN_REPO_FULL_ACCESS }}
-          path: .github/actions/gitflow.ci.action
-
       - name: Generate infrastructure components manifest
         run: |
           # constants for selecting branches
@@ -55,10 +47,18 @@ jobs:
           fi
         
           VERSION="${BASH_REMATCH[2]}"
-          IMG="public.ecr.aws/${GITHUB_ORG}/core.${GITHUB_REPO_NAME}:${VERSION}" make generate 
+          IMG="public.ecr.aws/${GITHUB_ORG}/core.${GITHUB_REPO_NAME}:${VERSION}" make generate
+
+      - name: Checkout Gitflow CI action repository
+        uses: actions/checkout@v4
+        with:
+          repository: edenlabllc/gitflow.ci.action
+          ref: v1
+          token: ${{ secrets.GH_TOKEN_REPO_FULL_ACCESS }}
+          path: .github/actions/gitflow.ci.action
 
       - name: Run Gitflow CI action
-        uses: .github/actions/gitflow.ci.action
+        uses: ./.github/actions/gitflow.ci.action
         with:
           core_aws_region: ${{ env.CORE_AWS_REGION }}
           core_aws_access_key_id: ${{ secrets.CORE_AWS_ACCESS_KEY_ID }}
