#1 - add metadata.yaml for CAPI

--- a/.github/workflows/core-public.yaml
+++ b/.github/workflows/core-public.yaml
@@ -70,3 +70,4 @@ jobs:
           image_scan: false
           release_artifacts: |
             dist/infrastructure-components.yaml
+            metadata.yaml
