Add default labels for CRDs. Change name prefix in Kustomize. Fix config/samples.

--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -6,7 +6,12 @@ namespace: capop-system
 # "wordpress" becomes "alices-wordpress".
 # Note that it should also match with the prefix (text before '-') of the namespace
 # field above.
-namePrefix: onprem-
+namePrefix: capop-
+
+## Default labels
+labels:
+  - pairs:
+      cluster.x-k8s.io/provider: infrastructure-onprem
 
 # Labels to add to all resources and selectors.
 #labels:
