--- a/config/samples/server-02.yaml
+++ b/config/samples/server-02.yaml
@@ -31,9 +31,9 @@ spec:
   # k3sApiPort: 6443
   # k3sExtraAgentArgs: ""
   # k3sExtraServerArgs: ""
-  k3sExtraServiceEnvs: [ 'ENV_VAR1=VALUE1', 'ENV_VAR2=VALUE2' ]
+  # k3sExtraServiceEnvs: [ 'ENV_VAR1=VALUE1', 'ENV_VAR2=VALUE2' ]
   # k3sServerLocation: /var/lib/rancher/k3s
-  # k3sServerLocationDeleteProtect false
+  # k3sServerLocationDeleteProtect: false
   # k3sSystemdDir: /etc/systemd/system
 
   k3sAirGapEnabled: true
