--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,3 +1,8 @@
+## Default labels
+labels:
+  - pairs:
+      cluster.x-k8s.io/v1beta1: v1alpha1
+
 ## Append samples of your project ##
 resources:
 - config_v1alpha1_k3sremotemachine.yaml
