#2 - refactoring kustomization and manifests

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -119,6 +119,6 @@ spec:
 #            type: DirectoryOrCreate
         - name: ssh-key
           secret:
-            secretName: onprem-ssh-private-key
+            secretName: capop-ssh-identity-secret
       serviceAccountName: controller-manager
       terminationGracePeriodSeconds: 10
