--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -1,6 +1,11 @@
 # This kustomization.yaml is not intended to be run by itself,
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/default
+labels:
+  - pairs:
+      cluster.x-k8s.io/provider: infrastructure-onprem
+      cluster.x-k8s.io/v1beta1: v1alpha1
+
 resources:
 - bases/config.onprem.edenlab.io_k3sremotemachines.yaml
 - bases/config.onprem.edenlab.io_k3sclusters.yaml
