--- a/watches.yaml
+++ b/watches.yaml
@@ -46,7 +46,7 @@
     ansible_host: "{{ _config_onprem_edenlab_io_k3sremotemachine.spec.address }}"
     ansible_python_interpreter: /usr/bin/python3
     ansible_ssh_common_args: '-o ControlMaster=no -o ControlPersist=no -o ControlPath=none'
-    ansible_ssh_private_key_file: /opt/ssh/id_rsa
+    ansible_ssh_private_key_file: /opt/ssh/private_key
     hostname: "{{ ansible_operator_meta.name }}"
     # Prepare OS
     additional_disk_device: "{{ _config_onprem_edenlab_io_k3sremotemachine.spec.additionalDiskDevice | default('') }}"
